--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">TugasUTS</string>
+    <string name="form_title">Formulir Pendaftaran</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="first_name">Nama Depan</string>
+    <string name="last_name">Nama Belakang</string>
+    <string name="password">Password</string>
+    <string name="retype_password">Ketik Ulang Password</string>
+    <string name="send_button">Kirim</string>
+    <string name="cancel_button">Batal</string>
 </resources>
